--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' type='css' href='styles.css'> 
+    <link rel='stylesheet' type='css' href='styles.css'>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="//localhost:35729/livereload.js"></script>
   </head>
   <body>
     <div class="scoreboard">
       <!-- Modify the scoreboard when important events occur in your game! -->
       <div class="high">High score: <span>0</span></div>
       <div class="current">Current score: <span>0</span></div>
-      <div class="collisions">Collisions: <span>0</span></div>
+      <div class="collisions">Collision: <span>0</span></div>
     </div>
+    <div id="container"></div>
     <script src="d3.js" charset="utf-8"></script>
     <script src='watchout.js'></script>
   </body>
