Got angry fred asteroids to work

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel='stylesheet' type='css' href='styles.css'>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="//localhost:35729/livereload.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div class="scoreboard">
